# graph-ufs

./: .gitignore  .gitmodules  README.md  evaluate-gdm.sh  evaluate-graphcast.sh  evaluate-graphufs.sh  evaluate-long-forecast.sh  evaluate-pangu.sh  pyproject.toml
conda/: README.md  cpu-workaround.yaml  cpu.yaml  external.yaml  gpu-perlmutter.yaml  gpu-workaround.yaml  gpu.yaml  perlmutter-gpu.yaml
graphufs/: .emulator.py.swp  .utils.py.swp  __init__.py  batchloader.py  coupledemulator.py  dataset.py  datasets.py  diagnostics.py  emulator.py  evaluation.py  fvcoupledemulator.py  fvemulator.py  fvstatistics.py  lineplot.py  mpi.py  normalizer.py  postprocess.py  progress.py  replay_ocn_vertical_levels.yaml  replay_vertical_levels.yaml  spatialmap.py  stacked_diagnostics.py  stacked_mpi_training.py  stacked_parallel_training.py  stacked_training.py  stacked_utils.py  statistics.py  tensorstore.py  torch.py  training.py  utils.py
prototypes/atm_only/: config.py  inference.py
prototypes/atm_wsstsss_noskin/: config.py  monitor_tensorboard.ipynb  postprocess_inference.py
prototypes/cp0/: README.md  calc_normalization.py  graphufs_regridder  mini_coupled_emulator.py  plot_loss.ipynb  train.py
prototypes/cp0_mini/: README.md  calc_normalization.py  data_visualization.ipynb  mini_coupled_emulator.py  plot_loss.ipynb  spatial_plots.ipynb  train.py
prototypes/cp1/: append_to_gcp.ipynb  calc_statistics.py  config.py  config_preprocess.py  coupled_emulator.py  cp1.py  get_chunk_size.ipynb  landseamask-stats.ipynb  landseamask.ipynb  (+5 more)
scripts/: train_mpi.py  train_nompi.py
(+256 files in other folders)
